src/test/deca/syntax/valid/point_pars_class_01.deca
// Description:
//    Programme testant la déclaration d'une méthode .
//
// Resultats:
//
//
//
// Historique:
//    cree le 13/01/2023

class A {
    float m;
    int x(int y) {
        float u = 1.2;
        println(u);
    }
}

{

    a A = new A();
    a.m = 3;

}